Prevented 'Stop Previewing' button from wrapping

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -56,6 +56,7 @@ main {
     display: flex;
     column-gap: 0.5rem;
     align-items: flex-end;
+    white-space: nowrap;
 }
 
 @media screen and (max-width: 500pt) {
